Правки по проекту+ осталась  проблема с фичами в фильтрах

--- a/index.html
+++ b/index.html
@@ -230,6 +230,6 @@
     </div>
   </template>
 <script src="./leaflet/leaflet.js"></script>
-<script type="module" src="js/main.js"></script>>
+<script type="module" src="js/main.js"></script>
 </body>
 </html>
